--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
